--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 123456
+server.port=8585
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/testDB
+spring.datasource.username = root
+spring.datasource.password = T1tanomachy
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= update
-
-# App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+# ===============================
+# JPA / HIBERNATE / with mysql
+# ===============================
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.format_sql = true;
+# ===============================
